--- a/pages/admin/user.html
+++ b/pages/admin/user.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>User</title>
+    <title>Hompage</title>
 </head>
 <body>
-    <h1>Navbar</h1>
-    <title>Other</title>
+    <h1>Homepage</h1>
 </head>
 </html>
