--- a/pages/admin/user.html
+++ b/pages/admin/user.html
@@ -6,10 +6,6 @@
     <title>Hompage</title>
 </head>
 <body>
-    <h1>Homepage</h1>
-
-    <footer>
-        <h3>Footer</h3>
-    </footer>
+    <h1>Homepageeeee</h1>
 </head>
 </html>
