--- a/pages/index.html
+++ b/pages/index.html
@@ -159,5 +159,64 @@
         <script src="../assets/user/js/index.js"></script>
 
 </body>
+<nav class="navbar navbar-expand-lg navbar-light fixed-top">
+</nav>
+<div class="jumbotron text-center">
+
+</div>
+
+<div class="container">
+    <div class="row">
+  
+    </div>
+</div>
+
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <h2>Kết quả bài làm</h2>
+            <form id="resultForm">
+         
+                <button type="submit" class="btn btn-primary">Gửi</button>
+            </form>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <h2>Bình luận</h2>
+            <div id="comments">
+             
+            </div>
+            <form id="commentForm">
+                <textarea class="form-control" rows="3" placeholder="Viết bình luận của bạn"></textarea>
+                <button type="submit" class="btn btn-primary mt-2">Gửi bình luận</button>
+            </form>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <h2>Đánh giá</h2>
+            <select class="form-control mb-2" id="rating">
+                <option value="1">1 Sao</option>
+                <option value="2">2 Sao</option>
+                <option value="3">3 Sao</option>
+                <option value="4">4 Sao</option>
+                <option value="5">5 Sao</option>
+            </select>
+            <button id="submitRating" class="btn btn-primary">Gửi đánh giá</button>
+        </div>
+    </div>
+</div>
+
+<footer>
+ 
+</footer>
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.9/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<script src="../assets/user/js/index.js"></script>
+
+</body>
 
 </html>
