--- a/pages/index.html
+++ b/pages/index.html
@@ -197,11 +197,11 @@
         <div class="col-md-12">
             <h2>Đánh giá</h2>
             <select class="form-control mb-2" id="rating">
-                <option value="1">1 Sao</option>
-                <option value="2">2 Sao</option>
-                <option value="3">3 Sao</option>
-                <option value="4">4 Sao</option>
-                <option value="5">5 Sao</option>
+                <option value="1">rất dễ</option>
+                <option value="2">dễ</option>
+                <option value="3">trung bình</option>
+                <option value="4">khó</option>
+                <option value="5">rất khó</option>
             </select>
             <button id="submitRating" class="btn btn-primary">Gửi đánh giá</button>
         </div>
