--- a/pages/admin/admin-monthi.html
+++ b/pages/admin/admin-monthi.html
@@ -56,16 +56,17 @@
             <thead>
               <tr>
                 <th>STT</th>
-                <th class="text-start">Môn</th>
-                <th>số bài đã làm</th>
-                
+                <th>Môn thi</th>
+                <th>số câu hỏi</th>
+                <th>số lượng đã làm</th>
                 <th>Hành động</th>
               </tr>
             </thead>
           <tbody>
             <td>1</td>
-            <td>Meo</td>
-            <td>12356757</td>
+            <td>Toán</td>
+            <td>50</td>
+            <td>20</td>
             <td>
               <button class="btn btn-warning">Sửa</button>
               <button class="btn btn-danger">Xóa</button>
@@ -77,6 +78,6 @@
     </div>    
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="/assets/user/js/index.js"></script>
+    <script src="/assets/admin/js/admin.js"></script>
 </body>
 </html>
