--- a/pages/Ex ENG/dethide.html
+++ b/pages/Ex ENG/dethide.html
@@ -58,9 +58,6 @@
                             <!-- Thêm các môn học khác nếu cần -->
                         </div>
                     </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Hỏi đáp</a>
-                    </li>
                     <div class="dropdown">
                         <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -78,11 +75,6 @@
                         <button id="timKiem" class="btn btn-outline-success my-2 my-sm-0">Tìm kiếm</button>
                     </form>
             </div>
-            <!-- <form id="searchForm" class="form-inline my-2 my-lg-0">
-                        <input class="form-control mr-sm-2" type="text" placeholder="Tìm kiếm" aria-label="Search">
-                        <button id="timKiem" class="btn btn-outline-success my-2 my-sm-0">Tìm kiếm</button>
-                    </form> -->
-
             <li class="nav-item active">
                 <a id="registerBtn" class="nav-link btn btn-primary rounded-pill text-white" href="./register.html">Đăng
                     ký</a>
@@ -181,7 +173,7 @@
             });
         });
     </script>
-
+    <script src="/assets/user/js/index.js"></script>
 </body>
 
 </html>
