--- a/pages/Ex ENG/register.html
+++ b/pages/Ex ENG/register.html
@@ -13,7 +13,7 @@
 <body>
     <div class="row">
         <div class="col-md-12">
-            <form action="/pages/index.html" method="post">
+            <form action="./exam.html" method="post">
                 <h1> Sign Up </h1>
 
                 <fieldset method="POST">
