--- a/pages/admin/admin-account.html
+++ b/pages/admin/admin-account.html
@@ -32,7 +32,7 @@
               data-bs-target="#openMenu" aria-expanded="false" aria-controls="openMenu">
               =
             </button>
-            <a class="navbar-brand" href="#">Admin</a>
+            <a class="navbar-brand" href="./admin.html">Admin</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
               data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
               aria-label="Toggle navigation">
@@ -47,7 +47,7 @@
                     Xin chào Admin
                   </a>
                   <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="../index.html">xem trang chủ</a></li>
+                    <li><a class="dropdown-item" href="../Ex ENG/exam.html">xem trang chủ</a></li>
                     <li>
                       <hr class="dropdown-divider">
                     </li>
