--- a/pages/Ex math/Toan de 4.html
+++ b/pages/Ex math/Toan de 4.html
@@ -4,88 +4,183 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="/layouts/user/css/test.css" rel="stylesheet">
     <script type="text/javascript" async
         src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML">
-    </script>
+        </script>
     <title>Đề Toán 4</title>
 </head>
 
 <body>
-    <h2>Câu I </h2>
-    <p>Giải hệ phương trình: \[ \begin{cases} \frac{x - 3}{x - 2} - 3y = 1 \\ \frac{3}{x - 2} + 2y = 8 \end{cases} \]</p>
+    <div id="countdown"></div>
+    <div class="main-container">
+        <h1>TOÁN ĐỀ 4</h1>
+        <!-- < id="quest-f" class="d-flex flex-wrap"> -->
+        <div class="wraper">
+            <div class="inner-group">
+                <h2>Câu 1</h2>
+                <label for="countries">
+                    <p>Cho hai biểu thức \(A = \frac{{x^3 - 8}}{{x - 2}}\) và \(B = x^2 + 2x + 4\) với \(x \neq 2.\)
+                    </p>
 
-    <ol>
-        <li>Tìm nghiệm của hệ phương trình trên.</li>
-        <li>Chứng minh rằng phương trình \(x^2 + y^2 - 4x - 6y + 9 = 0\) là phương trình của một đường tròn.</li>
-        <li>Tìm hệ số góc của đường thẳng \(d: 2x - y + 3 = 0\).</li>
-        <li>Tính diện tích hình thang ABCD với \(AB = 3\), \(BC = 4\), và \(\angle A = 60^\circ\).</li>
-        <li>Tính thể tích của khối chóp có đáy là một hình vuông có cạnh bằng 5 và chiều cao bằng 7.</li>
-    </ol>
+                    <ol>
+                        <li>Tính giá trị của \(A\) khi \(x = 4\).</li>
+                        <li>Chứng minh rằng \(B = (x + 1)^2 + 3.\)</li>
+                        <li>Tìm tất cả các giá trị của \(x\) sao cho \(A - B = -3.\)</li>
+                        <li>Giải phương trình \(\frac{1}{x-2} + \frac{2}{x} = \frac{3}{x^2 - 2x}.\)</li>
+                        <li>Tính tích của 2 căn bậc ba: \(\sqrt[3]{8x^3}\) và \(\sqrt[3]{27x^6}.\)</li>
+                    </ol>
+                </label><br>
+                <!-- Phần trắc nghiệm -->
+                <p><input type="radio" name="Q_countries_1" value="0" id="country_1" />A. \(12\); \(B = (x + 1)^2 +
+                    3\); \(1\); \(4\); \(6x\)</p>
+                <p><input type="radio" name="Q_countries_1" value="5" id="country_2" />B. \(6\); \(B = (x + 1)^2 +
+                    3\); \(2\); \(2\); \(6x\)</p>
+                <p><input type="radio" name="Q_countries_1" value="0" id="country_3" />C. \(8\); \(B = (x + 1)^2 +
+                    4\); \(3\); \(3\); \(3x^2\)</p>
+                <p><input type="radio" name="Q_countries_1" value="0" id="country_4" />D. \(4\); \(B = (x + 1)^2 +
+                    3\); \(4\); \(1\); \(4x\)</p>
+            </div>
+            <!-- Câu II -->
+            <div class="inner-group">
+                <h2>Câu 2 </h2>
+                <label for="countries">
+                    <p>Cho hàm số \(f(x) = x^3 - 4x^2 + 5x - 2.\)</p>
+                    <p>a) Tìm các giá trị cực trị của \(f(x)\).</p>
+                    <p>b) Tìm tất cả các giá trị của \(x\) thỏa mãn \(f(x) > 0\).</p>
+                </label><br>
+                <ol type="a">
+                    <li><input type="radio" name="Q_countries_2" value="5">\(x = 1\) là giá trị cực tiểu và \(x =
+                        2\) là giá trị cực đại;\(x \in (1, 2)\)</li>
+                    <li><input type="radio" name="Q_countries_2" value="0">\(x = -1\) là giá trị cực tiểu và \(x =
+                        2\) \(x \in (-\infty, 1)\)là giá trị cực đại</li>
+                    <li><input type="radio" name="Q_countries_2" value="0">\(x = -1\) là giá trị cực đại và \(x =
+                        2\) là giá trị cực tiểu,\(x \in (-\infty, 1)\)</li>
+                    <li><input type="radio" name="Q_countries_2" value="0">\(x = 1\) là giá trị cực đại và \(x = 2\)
+                        là giá trị nhỏ,\(x \in (-\infty, 1)\)</li>
+                </ol>
+            </div>
+            <div class="inner-group">
+                <label for="countries">
+                    <h2>Câu 3 </h2>
 
-    <!-- Phần trắc nghiệm -->
-    <p><input type="radio" name="Q_countries" value="0" id="country_1" />A. \(x = 4, y = 3\); đúng; \(-2\); \(6\); \(60\)</p>
-    <p><input type="radio" name="Q_countries" value="20" id="country_2" />B. \(x = 5, y = 2\); đúng; \(-3\); \(5\sqrt{3}\); \(35\)</p>
-    <p><input type="radio" name="Q_countries" value="0" id="country_3" />C. \(x = 3, y = 4\); sai; \(2\); \(8\); \(105\)</p>
-    <p><input type="radio" name="Q_countries" value="0" id="country_4" />D. \(x = 2, y = 5\); đúng; \(-1\); \(4\); \(45\)</p>
+                    <p>Giải phương trình \(\frac{x^2 - 1}{x^2 + 2x + 1} = 3.\)</p>
+                </label><br>
+                <p><input type="radio" name="Q_countries_3" value="0" id="country_1" />1;1</p>
+                <p><input type="radio" name="Q_countries_3" value="5" id="country_2" />-1;-2</p>
+                <p><input type="radio" name="Q_countries_3" value="0" id="country_3" />3;5</p>
+                <p><input type="radio" name="Q_countries_3" value="0" id="country_4" />1</p>
+            </div>
+            <div class="inner-group">
+                <label for="countries">
+                    <!-- Câu IV -->
+                    <h2>Câu 4 </h2>
+                    <p>Cho hàm số \(g(x) = \frac{2x^2 + 5x - 3}{x^2 - 4}.\)</p>
+                    <p>a) Tìm tập xác định của \(g(x)\).</p>
+                    <p>b) Tìm các điểm phân li của \(g(x)\).</p>
 
-</body>
-<!-- Câu II -->
-<h2>Câu II </h2>
-    <p>Cho hàm số \(m(x) = \frac{x^3 - 8}{x^2 - 4}.\)</p>
-    <p>a) Tìm tập xác định của \(m(x)\).</p>
-    <p>b) Tìm các điểm phân li của \(m(x)\).</p>
-    <p><input type="radio" name="Q_function" value="0" id="function_1" />A. \(D_{m} = (-\infty, -2) \cup (-2, 2) \cup (2, +\infty)\)</p>
-    <p><input type="radio" name="Q_function" value="20" id="function_2" />B. \(D_{m} = (-\infty, -2) \cup (-2, 2) \cup (2, +\infty)\)</p>
-    <p><input type="radio" name="Q_function" value="0" id="function_3" />C. \(D_{m} = (-\infty, -2) \cup (-2, 2) \cup (2, +\infty)\)</p>
-    <p><input type="radio" name="Q_function" value="0" id="function_4" />D. \(D_{m} = (-\infty, -2) \cup (-2, 2) \cup (2, +\infty)\)</p>
+                    <p>a) Tập xác định của \(g(x)\) và các điểm phân li:</p>
+                </label><br>
+                <p><input type="radio" name="Q_countries_4" value="0" id="country_1" />A. \((-∞,−2)∪(−2,2)∪(2,+∞)\)
+                    và -2 và 2</p>
+                <p><input type="radio" name="Q_countries_4" value="5" id="country_2" />B. \((-∞,−2)∪(2,+∞)\) và -2
+                    hoặc 2</p>
+                <p><input type="radio" name="Q_countries_4" value="0" id="country_3" />C. \((-2,2)\) và -2</p>
+                <p><input type="radio" name="Q_countries_4" value="0" id="country_4" />D. \((-∞,+∞)\) và 2</p>
+            </div>
+            <div class="inner-group">
 
-<!-- Câu III -->
-<h2>Câu III </h2>
-    <p>Giải phương trình \(\sqrt{x} - \sqrt{x - 1} = 1.\)</p>
-
-    <p><input type="radio" name="Q_cities" value="0" id="equation_1" />A. \(x = 1\)</p>
-    <p><input type="radio" name="Q_cities" value="20" id="equation_2" />B. \(x = 2\)</p>
-    <p><input type="radio" name="Q_cities" value="0" id="equation_3" />C. \(x = 3\)</p>
-    <p><input type="radio" name="Q_cities" value="0" id="equation_4" />D. \(x = 4\)</p>
-<!-- Câu IV -->
-<h2>Câu IV </h2>
-    <p>Cho hàm số \(n(x) = \frac{x^4 - 16}{x^2 - 4}.\)</p>
-    <p>a) Tìm tập xác định của \(n(x)\).</p>
-    <p>b) Tìm các điểm phân li của \(n(x)\).</p>
-    <p><input type="radio" name="Q_function" value="20" id="function_1" />A. \(D_{n} = (-\infty, -2) \cup (-2, 2) \cup (2, +\infty)\)</p>
-<p><input type="radio" name="Q_function" value="0" id="function_2" />B. \(D_{n} = (-\infty, -2) \cup (-2, 2) \cup (2, +\infty)\)</p>
-<p><input type="radio" name="Q_function" value="0" id="function_3" />C. \(D_{n} = (-\infty, -2) \cup (-2, 2) \cup (2, +\infty)\)</p>
-<p><input type="radio" name="Q_function" value="0" id="function_4" />D. \(D_{n} = (-\infty, -2) \cup (-2, 2) \cup (2, +\infty)\)</p>
-
-
-
-<!-- Câu V -->
-<h2>Câu V </h2>
-    <p>Giải phương trình \(\frac{3}{x - 1} + \frac{2}{x - 2} = \frac{5}{x - 1}.\)</p>
-    <p><input type="radio" name="Q_equation" value="0" id="equation_1" />A. \(x = 3\)</p>
-<p><input type="radio" name="Q_equation" value="0" id="equation_2" />B. \(x = 2\)</p>
-<p><input type="radio" name="Q_equation" value="20" id="equation_3" />C. \(x = 4\)</p>
-<p><input type="radio" name="Q_equation" value="0" id="equation_4" />D. \(x = 5\)</p>
-<div id="total_result">
-    <div class="second-container">
-        <label for="estimate-result"></label>
-        <input type="submit" name="estimate" value="Get your result" id="estimate-result" />
-    </div>
-    <!-- the container of the button -->
-    <div id="final-result">
-        
-        <div id="result_2">
-            <div id="show_result">
-                <p id="cong"></p>
-                <p id="degr"></p>
+                <label for="equation">
+                    <h2>Câu 5 </h2>
+                    <p>Giải phương trình \(2^{2x - 1} + 3 \times 2^{x - 1} - 2 = 0\).</p>
+                </label><br>
+                <p><input type="radio" name="Q_equation_5" value="0" id="equation_1" />A. \(x = -1\)</p>
+                <p><input type="radio" name="Q_equation_5" value="0" id="equation_2" />B. \(x = 0\)</p>
+                <p><input type="radio" name="Q_equation_5" value="5" id="equation_3" />C. \(x = 1\)</p>
+                <p><input type="radio" name="Q_equation_5" value="0" id="equation_4" />D. \(x = 2\)</p>
             </div>
         </div>
-        
+        <div class="center">
+            <form>
+                <input type="button" value="Tính Điểm" onclick="stopCountdownAndCalcScore()">
+                <input type="button" value="Quay về trang chủ" id="backToHomePageBtn" style="display: none;"
+                    onclick="backToHomePage()">
+                <div id="result"></div>
+            </form>
+        </div>
     </div>
-</div>
-</form>
-</div>
-<script src="../js/tinhdiem.js"></script>
+    <script>
+        function calcScore() {
+            var inputs = document.querySelectorAll('input[type="radio"]');
+            var score = 0;
+            for (var i = 0; i < inputs.length; i++) {
+                if (inputs[i].checked && inputs[i].value === "5") {
+                    score += 2; // Increase score by 2 for each correct answer
+                    // Add 'correct' class to highlight correct answers in green
+                    inputs[i].classList.add('correct');
+                } else if (inputs[i].checked && inputs[i].value !== "5") {
+                    // Add 'incorrect' class to highlight incorrect answers in red
+                    inputs[i].classList.add('incorrect');
+                    // Find and select the correct answer in the same question group
+                    var correctAnswer = document.querySelector('input[type="radio"][name="' + inputs[i].name + '"][value="5"]');
+                    // If the correct answer is found, add 'correct' class to highlight it
+                    if (correctAnswer) {
+                        correctAnswer.classList.add('correct');
+                    }
+                }
+                // Disable all radio buttons after calculating the score
+                inputs[i].disabled = true;
+            }
+            // Display the result
+            document.getElementById('result').innerHTML = "Your score: " + score + "/10";
+        }
 
+        function stopCountdownAndCalcScore() {
+            clearInterval(timer); // Dừng bộ đếm thời gian
+            calcScore(); // Tính điểm
+            showBackToHomePageBtn(); // Hiển thị nút "Quay về trang chủ"
+        }
+
+        window.onload = function () {
+            // Kiểm tra xem đã bắt đầu đếm ngược hay chưa
+            var countdownStarted = localStorage.getItem('countdownStarted');
+            if (countdownStarted === 'true') {
+                startCountdown();
+            }
+        };
+
+        function startCountdown() {
+            var duration = 5 * 60; // 5 phút
+            var countdownDisplay = document.getElementById('countdown');
+
+            timer = setInterval(function () {
+                var minutes = Math.floor(duration / 60);
+                var seconds = duration % 60;
+
+                countdownDisplay.textContent = minutes + ":" + (seconds < 10 ? "0" : "") + seconds;
+
+                if (--duration < 0) {
+                    clearInterval(timer);
+                    countdownDisplay.textContent = "Hết giờ!";
+                    // Thực hiện hành động nào đó khi hết thời gian
+                    calcScore();
+                }
+            }, 1000);
+        }
+        function showBackToHomePageBtn() {
+            var btn = document.getElementById('backToHomePageBtn');
+            btn.style.display = 'inline-block'; // Hiển thị nút
+        }
+
+        function hideBackToHomePageBtn() {
+            var btn = document.getElementById('backToHomePageBtn');
+            btn.style.display = 'none'; // Ẩn nút
+        }
+
+        function backToHomePage() {
+            window.location.href = '/pages/Ex ENG/exam.html'; // Điều hướng về trang exam.html
+        }
+    </script>
+</body>
 
 </html>
