--- a/pages/Ex ENG/english.html
+++ b/pages/Ex ENG/english.html
@@ -104,7 +104,7 @@
                         <h5 class="card-title">Anh 3</h5>
                         <p class="card-text">Nguyễn Bảo Duy</p>
                         <p class="card-text">12/04/2024</p>
-                        <a href="#" class="btn btn-success">Bắt Đầu</a>
+                        <a href="B1.html" class="btn btn-success">Bắt Đầu</a>
                     </div>
                 </div>
             </div>
@@ -117,7 +117,7 @@
                         <h5 class="card-title">Anh 4</h5>
                         <p class="card-text">Nguyễn Minh Thuận</p>
                         <p class="card-text">12/04/2024</p>
-                        <a href="#" class="btn btn-success">Bắt Đầu</a>
+                        <a href="B2.html" class="btn btn-success">Bắt Đầu</a>
                     </div>
                 </div>
             </div>
