--- a/pages/Ex ENG/login.html
+++ b/pages/Ex ENG/login.html
@@ -25,6 +25,7 @@
 
                 </fieldset>
                 <button type="submit">Đăng Nhập</button>
+                <p>Bạn chưa có tài khoản? Đăng ký ngay <a href="./register.html"> tại đây</a></p>
 
             </form>
         </div>
