--- a/pages/Ex ENG/test.html
+++ b/pages/Ex ENG/test.html
@@ -76,7 +76,7 @@
                         </div>
                     </div>
                     <form id="searchForm" class="form-inline my-2 my-lg-0">
-                        <input class="form-control mr-sm-2" type="text" placeholder="Tìm kiếm" aria-label="Search">
+                        <input id="searchInput" class="form-control mr-sm-2" type="text" placeholder="Tìm kiếm" aria-label="Search">
                         <button id="timKiem" class="btn btn-outline-success my-2 my-sm-0">Tìm kiếm</button>
                     </form>
 
