--- a/pages/Ex ENG/A1.html
+++ b/pages/Ex ENG/A1.html
@@ -9,10 +9,9 @@
 </head>
 
 <body>
-    <div id="countdown"></div>
     <div class="main-containers">
-        <h1>A1</h1>
-        <form id="quest-f" class="d-flex flex-wrap">
+        <h1>ANH ĐỀ 1</h1>
+        <form id="quest-f">
             <div class="wraper">
                 <div class="group">
                     <!-- Câu 1 -->
@@ -53,8 +52,8 @@
                         <p><input type="radio" name="Q_planets_4" value="0" id="planet_3" />C. numerous</p>
                         <p><input type="radio" name="Q_planets_4" value="5" id="planet_4" />D. numerate</p>
                     </div>
-                </div>
-                <div class="group">
+                
+                
                     <!-- Câu 5 -->
                     <div class="inner-group">
                         <h2> Câu 5</h2>
